@@ -1,4 +1,8 @@
  06/11/2002 Ron Steinke <rsteinke@w-link.net>,
+    -Added an optional "milliseconds" argument to
+     tcp_socket_stream::is_ready(), to take advantage
+     of the timeout in select()
+ 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
     -Modified getSocket() so you can poll on the writability
      of a tcp_socket_stream during a nonblocking connect,
      instead of calling is_ready() in a timeout. You still
